--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="board">
     </div>
     
+    <script src="pieces.js"></script>
     <script src="script.js"></script>
-    <script src="movment.js"></script>
 </body>
 </html>
