--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     
     <script src="pieces.js"></script>
     <script src="script.js"></script>
+    <script src="checkMate.js"></script>
 </body>
 </html>
