base -casteling first move for ai

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 
-    <div id="board">
-    </div>
+    <button onclick="AImove(false);">AI Move</button>
+
+    <div id="board"></div>
     
+
     <script src="pieces.js"></script>
     <script src="script.js"></script>
     <script src="checkMate.js"></script>
+    <script src="ai.js"></script>
 </body>
 </html>
