--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <button onclick="AImove(false);">AI Move</button>
+    <button onclick="AImove();">AI Move</button>
 
     <div id="board"></div>
     
